force-app/main/default/objects/Case/fields/Monto_a_Compensar__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_Compensar__c</fullName>
    <label>Monto a Compensar</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>