force-app/main/default/objects/Case/fields/Monto_estimado_a_compensar__c.field-meta.xml
<CustomField>
    <fullName>Monto_estimado_a_compensar__c</fullName>
    <label>Monto Estimado a Compensar</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>