force-app/main/default/objects/Case/fields/Name_Manager__c.field-meta.xml
<CustomField>
    <fullName>Name_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>