force-app/main/default/objects/Case/fields/National_Courier__c.field-meta.xml
<CustomField>
    <fullName>National_Courier__c</fullName>
    <label>National Courier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>