force-app/main/default/objects/Case/fields/National_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Tracking_Number__c</fullName>
    <label>National Tracking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>