force-app/main/default/objects/Case/fields/No_enviar_correo__c.field-meta.xml
<CustomField>
    <fullName>No_enviar_correo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No enviar correo</label>
    <type>Checkbox</type>
</CustomField>