force-app/main/default/objects/Case/fields/Notificar_area_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>Notificar_area_de_seguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar área de seguro</label>
    <type>Checkbox</type>
</CustomField>