force-app/main/default/objects/Case/fields/Notify_Information_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Information_Email__c</fullName>
    <label>Notify Information Email</label>
    <type>Email</type>
</CustomField>