force-app/main/default/objects/Case/fields/Notify_Information_Name__c.field-meta.xml
<CustomField>
    <fullName>Notify_Information_Name__c</fullName>
    <label>Notify Information Name</label>
    <type>TextArea</type>
</CustomField>