force-app/main/default/objects/Case/fields/Notify_Information_Phone__c.field-meta.xml
<CustomField>
    <fullName>Notify_Information_Phone__c</fullName>
    <label>Notify Information Phone</label>
    <type>Phone</type>
</CustomField>