force-app/main/default/objects/Case/fields/Number_of_Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sample_Request__c</fullName>
    <label>Number of Sample Request</label>
    <summaryForeignKey>Detalle_Sample_Request__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>