force-app/main/default/objects/Case/fields/Numero_de_Lote__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Lote__c</fullName>
    <label>Número de Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>