force-app/main/default/objects/Case/fields/Origen_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Origen_del_producto__c</fullName>
    <label>Product Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>