force-app/main/default/objects/Case/fields/Out_of_specification__c.field-meta.xml
<CustomField>
    <fullName>Out_of_specification__c</fullName>
    <label>Out of specification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pureza</fullName>
            </value>
            <value>
                <fullName>Residuo</fullName>
            </value>
            <value>
                <fullName>Cloruro / Bromuro</fullName>
            </value>
            <value>
                <fullName>Sulfato</fullName>
            </value>
            <value>
                <fullName>Ca</fullName>
            </value>
            <value>
                <fullName>Na</fullName>
            </value>
            <value>
                <fullName>Cl</fullName>
            </value>
            <value>
                <fullName>MMP</fullName>
            </value>
            <value>
                <fullName>Mg</fullName>
            </value>
            <value>
                <fullName>SO4</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>Li2CO3 Residual</fullName>
            </value>
            <value>
                <fullName>D50</fullName>
            </value>
            <value>
                <fullName>D90</fullName>
            </value>
            <value>
                <fullName>D100</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>Insolubles en HCl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>