force-app/main/default/objects/Case/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <inlineHelpText>Enter your country of residence</inlineHelpText>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alemania</fullName>
            </value>
            <value>
                <fullName>Bélgica</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Centro América/Caribe</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
                <default>true</default>
                <label>Chile</label>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Corea</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>España</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Italia</fullName>
            </value>
            <value>
                <fullName>Japón</fullName>
            </value>
            <value>
                <fullName>Marruecos</fullName>
            </value>
            <value>
                <fullName>Medio Oriente</fullName>
            </value>
            <value>
                <fullName>México</fullName>
            </value>
            <value>
                <fullName>Norte de África</fullName>
            </value>
            <value>
                <fullName>Oceanía</fullName>
            </value>
            <value>
                <fullName>Otros Países de África</fullName>
            </value>
            <value>
                <fullName>Otros Países de América del Sur</fullName>
            </value>
            <value>
                <fullName>Otros Países de Asia</fullName>
            </value>
            <value>
                <fullName>Otros Países de Europa</fullName>
            </value>
            <value>
                <fullName>Perú</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Sur de África</fullName>
            </value>
            <value>
                <fullName>Tailandia</fullName>
            </value>
            <value>
                <fullName>Turquía</fullName>
            </value>
            <value>
                <fullName>U.A.E.</fullName>
            </value>
            <value>
                <fullName>USA / Canadá</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>