force-app/main/default/objects/Case/fields/Porcentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Porcentage_Complete__c</fullName>
    <formula>Actual_Effort__c/Estimated_Effort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>