force-app/main/default/objects/Case/fields/Posible_compensacion__c.field-meta.xml
<CustomField>
    <fullName>Posible_compensacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posible Compensación</label>
    <type>Checkbox</type>
</CustomField>