force-app/main/default/objects/Case/fields/Prepare_Documents__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepare Documents</label>
    <type>Checkbox</type>
</CustomField>