force-app/main/default/objects/Case/fields/Product_Grade_SR__c.field-meta.xml
<CustomField>
    <fullName>Product_Grade_SR__c</fullName>
    <description>Este campo se crea para poder seleccionar mas de 1 grado de una linea de negocio en los casos de Sample Request</description>
    <label>Product Grade SR</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Quality_Grade</valueSetName>
    </valueSet>
</CustomField>