force-app/main/default/objects/Case/fields/Producto_en_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Producto_en_transaccion__c</fullName>
    <formula>Transaction__r.Product__r.Name</formula>
    <label>Producto en transacción</label>
    <type>Text</type>
</CustomField>