force-app/main/default/objects/Case/fields/Propietario_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario Cuenta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>