force-app/main/default/objects/Case/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comunidades (Reclamos, requerimientos, otros)</fullName>
                <label>Communities (claims, request, others)</label>
            </value>
            <value>
                <fullName>Community Pampa</fullName>
            </value>
            <value>
                <fullName>Community Salar</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
                <label>Pricing Lithium - CPQ</label>
            </value>
            <value>
                <fullName>Sales - Iodine</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
                <label>Sales - Lithium</label>
            </value>
            <value>
                <fullName>Service - Iodine</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
                <label>Service - Lithium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>