force-app/main/default/objects/Case/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <inlineHelpText>Enter your company&apos;s business name</inlineHelpText>
    <label>Razón Social</label>
    <length>100</length>
    <type>Text</type>
</CustomField>