force-app/main/default/objects/Case/fields/Read_and_Accept_the_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Read_and_Accept_the_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I have provided the explanation and complementary information (images, files, etc.) for the understanding of my request.</inlineHelpText>
    <label>Read and Accept the Disclaimer</label>
    <type>Checkbox</type>
</CustomField>