force-app/main/default/objects/Case/fields/Received_by_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Received_by_the_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received by the customer</label>
    <type>Checkbox</type>
</CustomField>