force-app/main/default/objects/Case/fields/Received_in_Stgo__c.field-meta.xml
<CustomField>
    <fullName>Received_in_Stgo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received in Stgo</label>
    <type>Checkbox</type>
</CustomField>