force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Enter your region of residence</inlineHelpText>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AYSÉN DEL GRAL. C. IBÁÑEZ DEL CAMPO</fullName>
            </value>
            <value>
                <fullName>ANTOFAGASTA</fullName>
            </value>
            <value>
                <fullName>ARICA Y PARINACOTA</fullName>
            </value>
            <value>
                <fullName>ATACAMA</fullName>
            </value>
            <value>
                <fullName>BIOBÍO</fullName>
            </value>
            <value>
                <fullName>COQUIMBO</fullName>
            </value>
            <value>
                <fullName>LA ARAUCANÍA</fullName>
            </value>
            <value>
                <fullName>LIB. GRAL. BERNARDO O&apos;HIGGINS</fullName>
            </value>
            <value>
                <fullName>LOS LAGOS</fullName>
            </value>
            <value>
                <fullName>LOS RÍOS</fullName>
            </value>
            <value>
                <fullName>MAGALLANES Y ANTÁRTICA CHILENA</fullName>
            </value>
            <value>
                <fullName>MAULE</fullName>
            </value>
            <value>
                <fullName>METROPOLITANA</fullName>
            </value>
            <value>
                <fullName>ÑUBLE</fullName>
            </value>
            <value>
                <fullName>TARAPACÁ</fullName>
            </value>
            <value>
                <fullName>VALPARAÍSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>