force-app/main/default/objects/Case/fields/Representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Representante_legal__c</fullName>
    <inlineHelpText>Enter the name of your company&apos;s representative</inlineHelpText>
    <label>Representante legal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>