force-app/main/default/objects/Case/fields/Requested_to_Laboratory__c.field-meta.xml
<CustomField>
    <fullName>Requested_to_Laboratory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested to Laboratory</label>
    <type>Checkbox</type>
</CustomField>