force-app/main/default/objects/Case/fields/Requiere_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Requiere_Aprobacion__c</fullName>
    <formula>Requiere_Compensacion__c = TRUE  &amp;&amp; 
Monto_a_Compensar__c &gt;= 50000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere Aprobación</label>
    <type>Checkbox</type>
</CustomField>