force-app/main/default/objects/Case/fields/Requiere_Compensacion__c.field-meta.xml
<CustomField>
    <fullName>Requiere_Compensacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere Compensación</label>
    <type>Checkbox</type>
</CustomField>