force-app/main/default/objects/Case/fields/Requieres_Announcement__c.field-meta.xml
<CustomField>
    <fullName>Requieres_Announcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a new case is review for the product owner and she/he define send an announcement when the development finish, you need to select this checkbox for validate the annoucement was done beforce to close de case.</description>
    <label>Requieres Announcement?</label>
    <type>Checkbox</type>
</CustomField>