force-app/main/default/objects/Case/fields/Requires_Official_Doc_Update__c.field-meta.xml
<CustomField>
    <fullName>Requires_Official_Doc_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Official Doc. Update</label>
    <type>Checkbox</type>
</CustomField>