force-app/main/default/objects/Case/fields/Riesgos__c.field-meta.xml
<CustomField>
    <fullName>Riesgos__c</fullName>
    <label>Riesgos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agua</fullName>
            </value>
            <value>
                <fullName>Beneficios Sociales y Comunitarios</fullName>
            </value>
            <value>
                <fullName>Comunicación con Comunidades y Grupos de Interés</fullName>
            </value>
            <value>
                <fullName>Contribuciones</fullName>
            </value>
            <value>
                <fullName>Creación de Empleo de Desarrollo de Habilidades</fullName>
            </value>
            <value>
                <fullName>Preservación del Medioambiente</fullName>
            </value>
            <value>
                <fullName>Riesgos de la Operación o Accidentes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>