force-app/main/default/objects/Case/fields/RInfo_Completa__c.field-meta.xml
<CustomField>
    <fullName>RInfo_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla el cumplimiento del evento clave recopilación de información.</description>
    <label>RInfo_Completa</label>
    <type>Checkbox</type>
</CustomField>