force-app/main/default/objects/Case/fields/RUT_o_DNI__c.field-meta.xml
<CustomField>
    <fullName>RUT_o_DNI__c</fullName>
    <inlineHelpText>ENter your company&apos;s ID or taxpayer number. For Chile, use the following format: 12345678-9, with a dash and no periods</inlineHelpText>
    <label>RUT o DNI</label>
    <length>11</length>
    <type>Text</type>
</CustomField>