force-app/main/default/objects/Case/fields/Salesforce_Rol_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Rol_User__c</fullName>
    <label>Salesforce Role User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>CCheN Manager</fullName>
            </value>
            <value>
                <fullName>Director ASIA</fullName>
            </value>
            <value>
                <fullName>Director ASIA Japón</fullName>
            </value>
            <value>
                <fullName>Director EMEA</fullName>
            </value>
            <value>
                <fullName>Director NAFTA</fullName>
            </value>
            <value>
                <fullName>Encargado de Comunidad Pampa</fullName>
            </value>
            <value>
                <fullName>Encargado de Comunidad Salar</fullName>
            </value>
            <value>
                <fullName>Gerente Comunidades</fullName>
            </value>
            <value>
                <fullName>Ingeniero de Calidad</fullName>
            </value>
            <value>
                <fullName>Investigador</fullName>
            </value>
            <value>
                <fullName>Jefe de Comunidad Pampa</fullName>
            </value>
            <value>
                <fullName>Jefe de Comunidad Salar</fullName>
            </value>
            <value>
                <fullName>Jefe Gestión de Calidad</fullName>
            </value>
            <value>
                <fullName>Líder de Comunidad Pampa</fullName>
            </value>
            <value>
                <fullName>Líder de Comunidad Salar</fullName>
            </value>
            <value>
                <fullName>Product Manager</fullName>
            </value>
            <value>
                <fullName>Product Manager Director</fullName>
            </value>
            <value>
                <fullName>Quality Manager</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator África</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator China</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator Europa Occidental</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator Japón</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator Korea</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator Mexico y LATAM</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator NA</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator Oriente Medio</fullName>
            </value>
            <value>
                <fullName>Sales Manager África</fullName>
            </value>
            <value>
                <fullName>Sales Manager China</fullName>
            </value>
            <value>
                <fullName>Sales Manager Europa Occidental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>