force-app/main/default/objects/Case/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <description>Indica quien quedo a cargo de la búsqueda de la solución y su ejecución. Este campo utilizado para el soporte de la plataforma (caso HelpDesk)</description>
    <inlineHelpText>Service provider in charge of &quot;Review SP&quot; Step</inlineHelpText>
    <label>Executed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Seidor</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>VASS</fullName>
            </value>
            <value>
                <fullName>SQM Infrastructure</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>EY</fullName>
            </value>
            <value>
                <fullName>Admins - TI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>