force-app/main/default/objects/Case/fields/SQM_Filial__c.field-meta.xml
<CustomField>
    <fullName>SQM_Filial__c</fullName>
    <label>SQM Filial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SQM_Filial</valueSetName>
    </valueSet>
</CustomField>