force-app/main/default/objects/Case/fields/SQM_Position__c.field-meta.xml
<CustomField>
    <fullName>SQM_Position__c</fullName>
    <label>SQM Position</label>
    <length>30</length>
    <type>Text</type>
</CustomField>