force-app/main/default/objects/Case/fields/SQM_User_ID__c.field-meta.xml
<CustomField>
    <fullName>SQM_User_ID__c</fullName>
    <label>SQM User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>