force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>subject_issue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident N1</fullName>
            </value>
            <value>
                <fullName>Incident N2</fullName>
            </value>
            <value>
                <fullName>Incident N3</fullName>
            </value>
            <value>
                <fullName>Data Upload / Update</fullName>
            </value>
            <value>
                <fullName>Data Download</fullName>
            </value>
            <value>
                <fullName>Roles and Profiles</fullName>
            </value>
            <value>
                <fullName>Object and Fields</fullName>
            </value>
            <value>
                <fullName>Automations</fullName>
            </value>
            <value>
                <fullName>Process Approval</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Sales Process</fullName>
            </value>
            <value>
                <fullName>Service Process</fullName>
            </value>
            <value>
                <fullName>Evolutive</fullName>
            </value>
            <value>
                <fullName>Community Portal</fullName>
            </value>
            <value>
                <fullName>Release Salesforce</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>