force-app/main/default/objects/Case/fields/Sub_estado__c.field-meta.xml
<CustomField>
    <fullName>Sub_estado__c</fullName>
    <label>Sub estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En generación de reporte a cliente</fullName>
            </value>
            <value>
                <fullName>A la espera de aprobación de reporte a cliente</fullName>
            </value>
            <value>
                <fullName>Reporte a cliente aprobado</fullName>
            </value>
            <value>
                <fullName>Cierre por información no verídica</fullName>
            </value>
            <value>
                <fullName>Cierre por falta de información</fullName>
            </value>
            <value>
                <fullName>Cierre completado</fullName>
            </value>
            <value>
                <fullName>Cerrado con Seguimiento</fullName>
            </value>
            <value>
                <fullName>En generación de reporte técnico</fullName>
            </value>
            <value>
                <fullName>A la espera de aprobación de investigación</fullName>
            </value>
            <value>
                <fullName>En espera aprobación Key User</fullName>
            </value>
            <value>
                <fullName>En espera Priorización</fullName>
            </value>
            <value>
                <fullName>En estimación</fullName>
            </value>
            <value>
                <fullName>Aprobación Estimación</fullName>
            </value>
            <value>
                <fullName>Información</fullName>
            </value>
            <value>
                <fullName>Configuraciones DEV</fullName>
            </value>
            <value>
                <fullName>Aprobado en DEV</fullName>
            </value>
            <value>
                <fullName>Validación UAT</fullName>
            </value>
            <value>
                <fullName>Aprobado UAT</fullName>
            </value>
            <value>
                <fullName>Validación Producción</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>En espera de respuesta de cliente</fullName>
                <isActive>false</isActive>
                <label>En espera de respuesta de cliente</label>
            </value>
            <value>
                <fullName>Investigación</fullName>
                <isActive>false</isActive>
                <label>Investigación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>